# smathgl

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  matrices.h  platform.h  quaternions.h  smathgl.h  vectors.h
source/: camera.c  camera.h  matrices.c  matrices.h  matrix_vector_op.h  quaternions.c  quaternions.h  smathgl.c  vectorf.c  vectorf.h
source/simd/: matrix4xm128f.h  quaternionf128.h  vectorf128.h
source/smgl/: camera.c  camera.h  matrices.c  matrices.h  matrix_vector_op.c  matrix_vector_op.h  quaternions.c  quaternions.h  smathgl.c  vectorf.c  vectorf.h  vectori.c  vectori.h
source/smgl/simd/: matrix4xm128f.h  quaternionf128.h  vectorf128.h  vectori128.h
